Open links in new tab

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <p>Oregon, USA</p>
         <p>&nbsp;</p>
         <span style="font-size: 70px;">
-          <a href="https://www.linkedin.com/in/timo-cornelius-metzger/">
+          <a href="https://www.linkedin.com/in/timo-cornelius-metzger/" target="_blank">
             <span class="sr-only">LinkedIn</span>
             <i class="fab fa-linkedin"></i>
           </a>
-          <a href="https://twitter.com/TCMetzger">
+          <a href="https://twitter.com/TCMetzger" target="_blank">
             <span class="sr-only">Twitter: @TCMetzger</span>
             <i class="fab fa-twitter-square"></i>
           </a>
-          <a href="https://github.com/tcmetzger">
+          <a href="https://github.com/tcmetzger" target="_blank">
             <span class="sr-only">GitHub</span>
             <i class="fab fa-github-square"></i>
           </a>
