Add aria-hidden and title for  accessibility

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         <p>Oregon, USA</p>
         <p>&nbsp;</p>
         <span style="font-size: 70px;">
-          <a href="https://www.linkedin.com/in/timo-cornelius-metzger/" target="_blank">
+          <a href="https://www.linkedin.com/in/timo-cornelius-metzger/" target="_blank" title="LinkedIn">
             <span class="sr-only">LinkedIn</span>
-            <i class="fab fa-linkedin"></i>
+            <i aria-hidden="true" class="fab fa-linkedin"></i>
           </a>
-          <a href="https://twitter.com/TCMetzger" target="_blank">
+          <a href="https://twitter.com/TCMetzger" target="_blank" title="Twitter">
             <span class="sr-only">Twitter: @TCMetzger</span>
-            <i class="fab fa-twitter-square"></i>
+            <i aria-hidden="true" class="fab fa-twitter-square"></i>
           </a>
-          <a href="https://github.com/tcmetzger" target="_blank">
+          <a href="https://github.com/tcmetzger" target="_blank" title="GitHub">
             <span class="sr-only">GitHub</span>
-            <i class="fab fa-github-square"></i>
+            <i aria-hidden="true" class="fab fa-github-square"></i>
           </a>
         </span>
     </div>
