--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel=StyleSheet href="style.css" type="text/css" media=screen>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Find Timo Cornelius Metzger on Linkedin, Twitter and GitHub">
     <meta name="author" content="Timo Cornelius Metzger">
     <meta name="keywords" content="web,journalism,tv,online,radio,social media, twitter, linkedin, github">
@@ -9,7 +10,6 @@
     <meta property="og:url" content="https://www.tcmetzger.de/" />
     <meta property="og:title" content="Timo Cornelius Metzger" />
     <meta property="og:description" content="Find Timo Cornelius Metzger on Linkedin, Twitter and GitHub" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timo Cornelius Metzger</title>
     <script src="https://kit.fontawesome.com/15b7fa02ba.js" crossorigin="anonymous"></script>
   </head>
