--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <p>Oregon, USA</p>
         <p>&nbsp;</p>
         <span style="font-size: 70px;">
-          <a href="https://www.linkedin.com/in/timo-cornelius-metzger/" target="_blank" title="LinkedIn">
+          <a href="https://www.linkedin.com/in/timo-cornelius-metzger/" target="_blank" rel="noopener" title="LinkedIn">
             <span class="sr-only">LinkedIn</span>
             <i aria-hidden="true" class="fab fa-linkedin"></i>
           </a>
-          <a href="https://twitter.com/TCMetzger" target="_blank" title="Twitter">
+          <a href="https://twitter.com/TCMetzger" target="_blank" rel="noopener" title="Twitter">
             <span class="sr-only">Twitter: @TCMetzger</span>
             <i aria-hidden="true" class="fab fa-twitter-square"></i>
           </a>
-          <a href="https://github.com/tcmetzger" target="_blank" title="GitHub">
+          <a href="https://github.com/tcmetzger" target="_blank" rel="noopener" title="GitHub">
             <span class="sr-only">GitHub</span>
             <i aria-hidden="true" class="fab fa-github-square"></i>
           </a>
