--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <meta property="og:description" content="Find Timo Cornelius Metzger on Linkedin, Twitter and GitHub" />
     <title>Timo Cornelius Metzger</title>
     <script src="https://kit.fontawesome.com/15b7fa02ba.js" crossorigin="anonymous"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168041721-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-168041721-2');
+      gtag('config', 'GA_TRACKING_ID', { 'anonymize_ip': true });
+    </script>
   </head>
   <body>
     <div>
